# globalutil

./: LICENSE  MCP_README.md  README.md  pyproject.toml  requirements_mcp.txt  setup.py
.github/workflows/: publish.yml
docs/: index.md
globalutil/: __init__.py
globalutil/filesystem/: __init__.py
globalutil/filesystem/inspections/: __init__.py  analyzer.py  extension_finder.py  inspect.py  integrity.py  recent.py  search.py
globalutil/filesystem/operations/: __init__.py  archive.py  backup.py  code_documenation.py  file_reader.py  manager.py  organizer.py  rename.py  sort.py
mcp/: mcp_server.py
tests/: test_gutil_filesystem.py
